[package]
name = "ley"
version = "0.1.0"
edition = "2021"
description = "A simple game launcher"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
lzma-rust2 = "0.15"
openssl = { version = "*", features = ["vendored"] }
reqwest = { version = "0.12", features = ["blocking"] }
sysinfo = "0.37"
tar = "0.4"
toml = "0.9"

[profile.release]
panic = "abort"
strip = true
